ExprAvailableMaterials - add damage types